cmd/mysql/deploy/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: @REPO_NAME@
  namespace: @NAMESPACE@
  labels:
    app: @REPO_NAME@
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: @REPO_NAME@
    tier: backend
